--- a/server/Dockerfile
+++ b/server/Dockerfile
@@ -1,8 +1,8 @@
 # Filename: Dockerfile 
-FROM node
+FROM node:16
 WORKDIR /app
 COPY package.json .
 RUN npm install
 COPY . .
 EXPOSE 8080
-CMD ["node", "app.js"]
+CMD ["node", "app"]
